# Productivity-Agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/gsheets_agent/: __init__.py  __main__.py  agent.py  auth.py  cli.py  config.py  router.py
src/gsheets_agent/tools/: __init__.py  gmail.py  sheets.py
tests/: conftest.py  test_agent.py  test_auth.py  test_cli.py  test_config.py  test_dispatch.py  test_gmail_pure.py  test_integration_sheets.py  test_router.py  test_sheets_pure.py
