[project]
name = "gsheets-agent"
version = "0.1.0"
description = "CLI AI agent for Google Sheets + Gmail using OpenAI"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.54.0",
    "google-api-python-client>=2.149.0",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "google-auth-httplib2>=0.2.0",
    "typer>=0.12.5",
    "rich>=13.9.4",
    "python-dotenv>=1.0.1",
    "prompt-toolkit>=3.0.48",
]

[project.scripts]
gsa = "gsheets_agent.cli:app"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
